<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hospital System</string>
    <string name="action_settings">Settings</string>
    <string name="Welcome">Welcome to</string>
    <string name="AppName">Triage Helper</string>
    <string name="title_activity_look_up_patient">Search for Patient</string>
    <string name="title_activity_create_new_record">Create a new record</string>
    <string name="title_activity_confirm_patient">Confirm Patient</string>
    <string name="title_activity_previous_record">Previous Records</string>
    <string name="title_activity_individual_data">Individual Data</string>
    <string name="title_activity_visit_record">Visit Record</string>
    <string name="title_activity_vital_signs_update">Vital Signs Update</string>
    <string name="LookUp">Look up existing patient</string>
    <string name="CreateANewRecord">Create a new record</string>
    <string name="Confirm">Confirm</string>
    <string name="HCNinput">Please input a health card number.</string>
    <string name="PreviousRecord">Here are the previous record(s) for patient</string>
    <string name="placeholder">Placeholder</string>
    <string name="IndividualData">Individual Data for patient</string>
    <string name="NameColon">Name: </string>
    <string name="DOBColon">Date of Birth: </string>
    <string name="HCNColon">Health Card Number: </string>
    <string name="VisitRecord">Visit Record of Patient</string>
    <string name="at">at</string>
    <string name="Update">update</string>
    <string name="VitalSignsUpdate">Vital Signs Update</string>
    <string name="addTemperature">add temperature</string>
    <string name="addSystolicPressure">add systolic pressure</string>
    <string name="addDiastolicPressure">add diastolic pressure</string>
    <string name="addHeartRate">add heart rate</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="CreateANewVitalSigns">Create a new vital signs record</string>
    <string name="notFunctionaltime">put current date as default here</string>
    <string name="CurrentDate">Current Date:</string>
    <string name="CurrentTime">Current Time:</string>
    <string name="ViewPreviousRecords">Previous Records</string>
    <string name="UpdateRecord">Update Record</string>
    <string name="forPatient">for patient</string>
    <string name="currentT">Use Current Time</string>
    <string name="LogIn">log in</string>
    <string name="Password">password</string>
    <string name="Username">username</string>
    <string name="title_activity_nurse_main">Logout</string>
    <string name="hello_world">Hello world!</string>
    <string name="SelectFeature">Please select a feature</string>
    <string name="NewPatient">New Patient</string>
    <string name="WaitingPatientList">Waiting Patients List</string>
    <string name="LookUpPatient">Look Up A Patient</string>
    <string name="CreateRecord">Create A New Record</string>
    <string name="title_activity_new_patient">Add a new Patient</string>
    <string name="patientInfoInput">"Please input the patient's information"</string>
    <string name="InputPatientName">Firstname Lastname</string>
    <string name="DOBformat">DOB (mm/dd/yyyy)</string>
    <string name="HCNhint">Health Card Number</string>
    <string name="title_activity_physician_main">Logout</string>
    <string name="SystolicColon">Systolic:</string>
    <string name="DiastolicColon">Diastolic:</string>
    <string name="HeartRateColon">Heart Rate:</string>
    <string name="TemperatureColon">Temperature:</string>
    <string name="TimeColon">Time of Record:</string>
    <string name="newPrescription">New Prescription</string>
    <string name="title_activity_add_prescription">Add a new Prescription</string>
    <string name="Medication">Medication</string>
    <string name="Instructions">Instructions</string>
    <string name="MainLoginFeedBack">"We couldn't log you in with what you just entered. Please try again."</string>
    <string name="hcnNotFound">"This health card number is not in the system. Please enter a valid health card number"</string>
    <string name="title_activity_waiting_list">Waiting List</string>
    <string name="CreateNewRecord">Create a new record</string>
    <string name="InputArrivalTimeHint">"Arrival Time(yyyy/MM/dd HH:mm)"</string>
    <string name="title_activity_prescription_display">Prescription Info</string>
    <string name="nameHolder">Name Placeholder</string>
    <string name="timeHolder">2000.01.01 00:00</string>
    <string name="arrivalTime">Arrival time</string>
    <string name="patientName">Patient name</string>
    <string name="VitalSignsList">Vital Signs List</string>
    <string name="SwipeInfo">Swipe left or right for other data</string>
    <string name="addTimeSeenByDoctor">Add time seen by a doctor</string>
    <string name="title_activity_add_time_seen_by_doctor">Add Time seen by Doctor</string>
    <string name="AddTimeSeenByDoctor">Add a doctor visit record</string>
    <string name="InputDoctorVisitTimeHint">Doctor Visit Time(yyyy/MM/dd HH:mm)</string>
    <string name="title_activity_popup">Popup</string>

</resources>
