<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hospitalsystem.NurseMain" >

    <TextView
        android:id="@+id/featureSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:textSize="25sp"
        android:text="@string/SelectFeature" />

    <Button
        android:id="@+id/waitingPatientList"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newPatient"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/WaitingPatientList" 
        android:onClick="onClickPaitentList"/>

    <Button
        android:id="@+id/lookUpPatient"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/waitingPatientList"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/LookUpPatient"
        android:onClick="onClickLookUpPatient" />

    <Button
        android:id="@+id/CreateRecord"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lookUpPatient"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/CreateRecord" 
        android:onClick="onClickCreateNewRecord"/>

    <Button
        android:id="@+id/newPatient"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/waitingPatientList"
        android:layout_below="@+id/featureSelect"
        android:layout_marginTop="46dp"
        android:text="@string/NewPatient" 
        android:onClick="onClickNewPatient"/>

</RelativeLayout>
