<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hospitalsystem.AddTimeSeenByDoctor" >

    
    <EditText
        android:id="@+id/doctorVisitInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CreateNewRecordTextView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:ems="10" 
        android:hint="@string/InputDoctorVisitTimeHint"
        android:textSize="16sp">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/CreateNewRecordTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/AddTimeSeenByDoctor"
        android:textSize="20sp" />

    <Button
        android:id="@+id/timeSeenUseCurrentTime"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/doctorVisitInput"
        android:layout_below="@+id/doctorVisitInput"
        android:text="@string/currentT"
        android:onClick="onClickCurrentTime"
        android:textSize="12sp" />

    <Button
        android:id="@+id/newDoctorVisitTimeSave"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timeSeenUseCurrentTime"
        android:layout_below="@+id/timeSeenUseCurrentTime"
        android:layout_marginTop="100dp"
        android:text="@string/Save"
        android:onClick="onClickSave" />


</RelativeLayout>
