<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hospitalsystem.VisitRecord" 
    android:orientation = "vertical">
	
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/patientName" />

	    <TextView
	        android:id="@+id/recordsName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/nameHolder"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/recordsTime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/textView1"
	        android:text="@string/timeHolder"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignTop="@+id/recordsTime"
	        android:text="@string/arrivalTime" />
        
    </RelativeLayout>

    <ViewFlipper
        android:id="@+id/viewflipper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="6dp" >
	    
            
        	<LinearLayout
        	    android:layout_width="match_parent"
        	    android:layout_height="match_parent"
        	    android:gravity="center"
        	    android:orientation="vertical" >
        	    
        	     <TextView
			      	android:layout_width="wrap_content"
			      	android:layout_height="wrap_content"
			       	android:text="@string/VitalSignsList"
			      	android:textAppearance="?android:attr/textAppearanceMedium" />
		        	    
        	     <TextView
			      	android:layout_width="wrap_content"
			      	android:layout_height="wrap_content"
			       	android:text="@string/SwipeInfo"/>
        	     
        	    <ListView
        	        android:id="@+id/VitalSignsList"
        	        android:layout_width="match_parent"
        	        android:layout_height="match_parent" >

                </ListView>
               
        	</LinearLayout>
        	
        	<LinearLayout
        	    android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical" >
				
        	    <TextView
			      	android:layout_width="wrap_content"
			      	android:layout_height="wrap_content"
			       	android:text="Prescriptions"
			      	android:textAppearance="?android:attr/textAppearanceMedium" />
		        	    
        	     <TextView
			      	android:layout_width="wrap_content"
			      	android:layout_height="wrap_content"
			       	android:text="Swipe left or right for other data"/>
        	     
        	    <ListView
                    android:id="@+id/PrescriptionsList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                </ListView>
               
        	</LinearLayout>
        	
        	<LinearLayout
        	    android:layout_width="match_parent"
        	    android:layout_height="match_parent"
        	    android:gravity="center"
        	    android:orientation="vertical" >
        	    
        	    <TextView
			      	android:layout_width="wrap_content"
			      	android:layout_height="wrap_content"
			       	android:text="Medical History"
			      	android:textAppearance="?android:attr/textAppearanceMedium" />
		        	    
        	     <TextView
			      	android:layout_width="wrap_content"
			      	android:layout_height="wrap_content"
			       	android:text="Swipe left or right for other data"/>
        	     
        	    <ListView
                    android:id="@+id/TimeList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                </ListView>
               
        	</LinearLayout>
        	
        </ViewFlipper>

</LinearLayout>