<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hospitalsystem.AddPrescription" >

    <EditText
        android:id="@+id/instructionsInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructions"
        android:layout_centerHorizontal="true"
        android:ems="10" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/instructionsInput"
        android:layout_centerVertical="true"
        android:text="@string/Instructions"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/medicationInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/medication"
        android:layout_below="@+id/medication"
        android:layout_centerHorizontal="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/medication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/instructions"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:text="@string/Medication"
        android:textSize="20sp" />

    <Button
        android:id="@+id/prescriptionSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/instructionsInput"
        android:layout_below="@+id/instructionsInput"
        android:layout_marginTop="62dp"
        android:text="@string/Save" />

</RelativeLayout>
